@@ -792,4 +792,10 @@
 
 /[^\xff]*PRUNE:\x{100}abc(xyz(?1))/8DZ
 
+/(?<=\K\x{17f})/8g+
+    \x{17f}\x{17f}\x{17f}\x{17f}\x{17f}
+
+/(?<=\K\x{17f})/8G+
+    \x{17f}\x{17f}\x{17f}\x{17f}\x{17f}
+
 /-- End of testinput5 --/
