@@ -149,6 +149,8 @@ Version 8.37 xx-xxx-2015
 36. The use of \K in a positive lookbehind assertion in a non-anchored pattern
     (e.g. /(?<=\Ka)/) could make pcregrep loop.
 
+37. There was a similar problem to 36 in pcretest for global matches.
+
 
 Version 8.36 26-September-2014
 ------------------------------
